kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  annotations:   # used for rolling out to show the change-cause 
    kubernetes.io/change-cause: "updating image to alpine"
spec:
  replicas: 3
  selector:
  matchLabels:
    app: nginx
  template:
    metadata: # information about the object
  name: nginx-pod1
  labels: # act like identifiers to the pods
    app: nginx
  spec: # actual specifications of the object and attributes vary from object to object
  containers:
    - name: nginx-container
      image: nginx:alpine
      ports:
        - containerPort: 80
