kubernetes/statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo
          name: mongo
          args: ["--dbpath", "/data/db"]
          command:
            - mongod
            - "--bind_ip_all"
            - "__replSet"
            - rs0  # replicaset name
          volumeMounts:
            - mountPath: /data/db
              name: mongo-volume
    volumeClaimTemplates:
      - metadata:
            name: mongo-volume
        spec:
          accessModes: ["ReadWriteOnce"]
          storageClassName: "demo-storage"
          resources:
            requests:
              storage: 1Gi
