kubernetes/headlessService.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  clusterIp: None
  selector:
    app: mongo
