kubernetes/todo-ingress-pathbased.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress-pathbased
annotations: # any characters captured by .* in path will be assigned to the placeholder $1 which is then used as a parameter for rewrite-target
  nginx.ingress.kubernetes.io/rewrite-target:/$1 
spec:
  rules:
  - host: todo.com
    http:
      paths: 
      - pathType: Prefix  # prefix exact and implementation
        path: /(.*)  # anything after todo.com/ should match this rule
        backend:
          service:
            name: todo-ui-service # should match with service.yaml file
            port: 
              number: 3001
      - pathType: Prefix  # prefix exact and implementation
        path: /api/(.*)  # anything after todo.com/ should match this rule
        backend:
          service:
            name: todo-api-service # should match with service.yaml file
            port: 
              number: 8080
